# FoodDonation_App

./: README.md  app.py  auth.py  delete_orders.py  models.py  pyproject.toml  routes.py
instance/: app.db
static/css/: style.css
static/js/: map.js  notifications.js
templates/: base.html  donor_form.html  login.html  ngo_dashboard.html  receiver_dashboard.html  register.html
